<resources>
    <string name="app_name">HaazRi App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello">Hello!</string>
    <string name="create_a_new_account">Create a new Account</string>

    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account?</string>

    <string name="add_member">Add Member</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="add">Add</string>
    <string name="_0">0</string>
    <string name="no_of_members">No. of Members</string>
    <string name="_08_april_fri">08-April | Fri</string>

    <string name="working_days">Working Days</string>

    <string name="holiday">Holiday</string>

    <string name="setting">Setting</string>
    <string name="n">N</string>
    <string name="chandansuthar510">ChandanSuthar510</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="log_out">Log Out</string>
    <string name="as">AS</string>
    <string name="amrit_suthar">Amrit Suthar</string>
    <string name="_9429346552">9429346552</string>
    <string name="full_time">Full Time</string>
    <string name="half_time">Half Time</string>
    <string name="over_time">Over Time</string>
    <string name="h">H</string>
    <string name="_26">26</string>
</resources>