<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="66dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="2dp"
    android:orientation="horizontal"
    android:padding="0dp">

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:fontFamily="@font/semibold"
        android:text="2022-11-23"
        android:textColor="@color/black"
        android:textSize="15sp" />

        <TextView
            android:id="@+id/fulltimebtn01"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:padding="2dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:background="@drawable/selecttimebackground"
            android:text="@string/full_time"
            />
        <TextView
            android:id="@+id/halftimebtn01"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="2dp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:background="@drawable/selecttimebackground"
            android:text="@string/half_time"
            />

    <TextView
        android:id="@+id/overtimebtn01"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:background="@drawable/selecttimebackground"
        android:gravity="center"
        android:padding="2dp"
        android:text="@string/over_time"
        android:textColor="@color/black" />
        <TextView
            android:id="@+id/holidaybtn01"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:textColor="#FF0000"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:background="@drawable/selecttimebackground"
            android:text="@string/h"
            />


</LinearLayout>