<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginBottom="0.5dp"
    android:elevation="10dp"
    app:cardElevation="10dp"
    app:cardBackgroundColor="#ffffff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/member_image"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:text="@string/as"
            android:gravity="center"
            android:textSize="22dp"
            android:textColor="@color/white"
            android:fontFamily="@font/semibold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/vectormemberlogo"
            />
        <LinearLayout
            android:id="@+id/linear01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/member_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amrit_suthar"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/mobileText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_9429346552"
                    app:layout_constraintLeft_toRightOf="@+id/member_image"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    />

            </LinearLayout>
<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="vertical"-->
<!--                android:layout_marginStart="98dp"-->
<!--                >-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Total"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="13sp"-->
<!--                    />-->
<!--                <TextView-->
<!--                    android:id="@+id/totalHaazRiText"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="26"-->
<!--                    app:layout_constraintLeft_toRightOf="@+id/member_image"-->
<!--                    android:layout_marginTop="4dp"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="18sp"-->
<!--                    android:layout_gravity="center"-->
<!--                    />-->
<!--            </LinearLayout>-->

        </LinearLayout>

        <View
            android:id="@+id/deletebtn"
            app:layout_constraintBottom_toTopOf="@+id/linear02"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_baseline_delete_outline_24"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            />
        <LinearLayout
            android:id="@+id/linear02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linear01"
            app:layout_constraintLeft_toRightOf="@+id/member_image"
            android:layout_marginStart="23dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:id="@+id/fulltimebtn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/black"
                android:background="@drawable/selecttimebackground"
                android:text="@string/full_time"
                />
            <TextView
                android:id="@+id/halftimebtn"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:background="@drawable/selecttimebackground"
                android:text="@string/half_time"
                />
            <TextView
                android:id="@+id/overtimebtn"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="36dp"
                android:gravity="center"
                android:padding="2dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/selecttimebackground"
                android:text="@string/over_time"
                />
            <TextView
                android:id="@+id/holidaybtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="#FF0000"
                android:layout_marginStart="20dp"
                android:background="@drawable/selecttimebackground"
                android:text="@string/h"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>