<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ligthtodarkbackground"
    tools:context=".fragments.fragment_create_member">

    <View
        android:id="@+id/addmemberlogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/addmemberlogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        />
    <TextView
        android:id="@+id/addmemberheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        android:textSize="28sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/addmemberlogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />


        <View
            android:id="@+id/personlogoview"
            android:layout_width="30dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_baseline_person_outline_24"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/addmemberheading"
            android:layout_marginStart="46dp"
            app:layout_constraintBottom_toTopOf="@+id/divider01"
            android:layout_marginTop="90dp"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <EditText
            android:id="@+id/edttnameText"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:hint="@string/name"
            android:textColorHint="@color/white"
            android:layout_marginEnd="40dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/divider01"
            android:background="@null"
            app:layout_constraintLeft_toRightOf="@+id/personlogoview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addmemberheading"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />

    <View
        android:id="@+id/divider01"
        android:layout_width="320dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/edttnameText"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="3dp"
        />



    <View
        android:id="@+id/mobileview"
        android:layout_width="30dp"
        android:layout_height="32dp"
        android:background="@drawable/ic_baseline_phone_iphone_24"
        app:layout_constraintTop_toBottomOf="@+id/personlogoview"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/divider02"
        android:layout_marginStart="46dp"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/mobileedttext"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:hint="@string/mobile"
        android:textColorHint="@color/white"
        android:layout_marginEnd="40dp"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/divider02"
        android:background="@null"
        app:layout_constraintLeft_toRightOf="@+id/mobileview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edttnameText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="55dp"
        />

    <View
        android:id="@+id/divider02"
        android:layout_width="320dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/mobileedttext"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="3dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addmemberbtn"
        android:layout_width="343dp"
        android:layout_height="50dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/mobileedttext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp"
        android:backgroundTint="#84FAB0"
        android:text="@string/add"
        android:textColor="@color/white"
        android:fontFamily="@font/bold"
        app:cornerRadius="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>