<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f2f2f4">

    <androidx.cardview.widget.CardView
        android:id="@+id/BannerCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/headerbackground"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/detailscardview"
                android:layout_width="300dp"
                android:layout_height="90dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="36dp"
                >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        >
                        <TextView
                            android:id="@+id/no_of_members"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/regular"
                            android:layout_marginLeft="50dp"
                            android:text="@string/_0"
                            android:textColor="@color/black"
                            android:textSize="21dp"
                            />
                        <TextView
                            android:layout_width="56dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/no_of_members"
                            android:layout_marginTop="2dp"
                            android:fontFamily="@font/regular"
                            android:layout_marginLeft="30dp"
                            android:text="@string/no_of_members"
                            android:textColor="@color/black"
                            android:gravity="center"
                            android:textSize="10sp"
                            />
                        <View
                            android:id="@+id/dividerline"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_width="2dp"
                            android:layout_height="79dp"
                            android:background="#bababa"
                            />
                        <TextView
                            android:id="@+id/currentdatetext"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular"
                            app:layout_constraintLeft_toRightOf="@+id/dividerline"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="@string/_08_april_fri"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            />
                    </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewfront001"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BannerCardView"
        tools:listitem="@layout/rcv_front"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addmemberbtnfront"
        android:layout_width="160dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="23dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#F43B47"
        app:cornerRadius="20dp"
        android:text="Add Member"
        app:icon="@drawable/personaddicon"
        android:textSize="13sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

